# dbgecko

./: .gitignore  AUTHORS.md  CMakeLists.txt  Makefile  README.md  build.sh  run.sh  test.sh  test.txt
.github/workflows/: ci.yml
cmake/: CMakeLists.txt  Makefile
cmake/tests/: CMakeLists.txt  Makefile  config.yml
cmake/tests/src/: test_config_arg_parser.c  test_config_loader.c  test_db_backup.c  test_db_restore.c  test_list_plugins.c  test_pg_backup.c  test_pg_restore.c  test_plugin_loader.c
include/: arguments.h  config_parser.h  globals.h  plugin_context.h  plugin_manager.h  storage.h  storage_local.h  storage_s3.h  storage_sftp.h  storage_ssh.h  tui.h  tui_widgets.h
scripts/: run-mem-safety.sh
scripts/run/: minio-server.sh
src/: 000_config_parser.c  000_db.c  000_plugin_manager.c  000_storage.c  001_config_parser.c  001_plugin_manager.c  001_storage.c  002_config_parser.c  002_storage.c  003_storage.c  004_storage.c  005_storage.c  dbeetle.c  dbgecko.c
src/tui/: 000_tui.c  001_tui.c  002_tui.c  003_tui.c
src/utils/: 000_utils.c
